// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CombinedResultsToCardsModelConverter with a mixture of url specifications 1`] = `
{
  "allCardsCollapsed": true,
  "cards": {
    "fail": [
      {
        "description": "failed-rule-1 description",
        "guidance": undefined,
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": [
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-1-selector-1, undefined",
              ],
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violation-1",
                  },
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violation-2",
                  },
                  {
                    "baselineStatus": "new",
                    "url": "https://example.com/failed-rule-1/violation-3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 1 of rule failed-rule-1",
              "howToFixSummary": "Violation 1 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-1 with default url https://example.com/rules/failed-rule-1",
      },
    ],
    "inapplicable": [
      {
        "description": "inapplicable-rule-1 description",
        "guidance": undefined,
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": [],
        "url": "url for inapplicable-rule-1 with default url https://example.com/rules/inapplicable-rule-1",
      },
    ],
    "pass": [
      {
        "description": "passed-rule-1 description",
        "guidance": undefined,
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": [],
        "url": "url for passed-rule-1 with default url https://example.com/rules/passed-rule-1",
      },
    ],
    "unknown": [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter with baseline-aware issues 1`] = `
{
  "allCardsCollapsed": true,
  "cards": {
    "fail": [
      {
        "description": "failed-rule-1 description",
        "guidance": undefined,
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": [
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-1-selector-1, undefined",
              ],
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "existing",
                    "url": "https://example.com/failed-rule-1/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 1 of rule failed-rule-1",
              "howToFixSummary": "Violation 1 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-1-selector-2, undefined",
              ],
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-1-selector-2",
              "css-selector": ".failed-rule-1-selector-2",
              "identifier": ".failed-rule-1-selector-2",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/1",
                  },
                  {
                    "baselineStatus": "existing",
                    "url": "https://example.com/failed-rule-1/violations/2",
                  },
                  {
                    "baselineStatus": "new",
                    "url": "https://example.com/failed-rule-1/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 2 of rule failed-rule-1",
              "howToFixSummary": "Violation 2 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-1 with default url https://example.com/rules/failed-rule-1",
      },
      {
        "description": "failed-rule-2 description",
        "guidance": undefined,
        "id": "failed-rule-2",
        "isExpanded": false,
        "nodes": [
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-2-selector-1, undefined",
              ],
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-2-selector-1",
              "css-selector": ".failed-rule-2-selector-1",
              "identifier": ".failed-rule-2-selector-1",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "existing",
                    "url": "https://example.com/failed-rule-2/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 1 of rule failed-rule-2",
              "howToFixSummary": "Violation 1 of rule failed-rule-2",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-2-selector-2, undefined",
              ],
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-2-selector-2",
              "css-selector": ".failed-rule-2-selector-2",
              "identifier": ".failed-rule-2-selector-2",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-2/violations/1",
                  },
                  {
                    "baselineStatus": "existing",
                    "url": "https://example.com/failed-rule-2/violations/2",
                  },
                  {
                    "baselineStatus": "new",
                    "url": "https://example.com/failed-rule-2/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 2 of rule failed-rule-2",
              "howToFixSummary": "Violation 2 of rule failed-rule-2",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-2 with default url https://example.com/rules/failed-rule-2",
      },
    ],
    "inapplicable": [
      {
        "description": "inapplicable-rule-1 description",
        "guidance": undefined,
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": [],
        "url": "url for inapplicable-rule-1 with default url https://example.com/rules/inapplicable-rule-1",
      },
    ],
    "pass": [
      {
        "description": "passed-rule-1 description",
        "guidance": undefined,
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": [],
        "url": "url for passed-rule-1 with default url https://example.com/rules/passed-rule-1",
      },
    ],
    "unknown": [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter with issues 1`] = `
{
  "allCardsCollapsed": true,
  "cards": {
    "fail": [
      {
        "description": "failed-rule-1 description",
        "guidance": undefined,
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": [
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-1-selector-1, undefined",
              ],
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 1 of rule failed-rule-1",
              "howToFixSummary": "Violation 1 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-1-selector-2, undefined",
              ],
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-1-selector-2",
              "css-selector": ".failed-rule-1-selector-2",
              "identifier": ".failed-rule-1-selector-2",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/1",
                  },
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/2",
                  },
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 2 of rule failed-rule-1",
              "howToFixSummary": "Violation 2 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-1 with default url https://example.com/rules/failed-rule-1",
      },
      {
        "description": "failed-rule-2 description",
        "guidance": undefined,
        "id": "failed-rule-2",
        "isExpanded": false,
        "nodes": [
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-2-selector-1, undefined",
              ],
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-2-selector-1",
              "css-selector": ".failed-rule-2-selector-1",
              "identifier": ".failed-rule-2-selector-1",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-2/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 1 of rule failed-rule-2",
              "howToFixSummary": "Violation 1 of rule failed-rule-2",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-2-selector-2, undefined",
              ],
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-2-selector-2",
              "css-selector": ".failed-rule-2-selector-2",
              "identifier": ".failed-rule-2-selector-2",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-2/violations/1",
                  },
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-2/violations/2",
                  },
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-2/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 2 of rule failed-rule-2",
              "howToFixSummary": "Violation 2 of rule failed-rule-2",
            },
            "ruleId": "failed-rule-2",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-2 with default url https://example.com/rules/failed-rule-2",
      },
    ],
    "inapplicable": [
      {
        "description": "inapplicable-rule-1 description",
        "guidance": undefined,
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": [],
        "url": "url for inapplicable-rule-1 with default url https://example.com/rules/inapplicable-rule-1",
      },
    ],
    "pass": [
      {
        "description": "passed-rule-1 description",
        "guidance": undefined,
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": [],
        "url": "url for passed-rule-1 with default url https://example.com/rules/passed-rule-1",
      },
    ],
    "unknown": [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter without issues 1`] = `
{
  "allCardsCollapsed": true,
  "cards": {
    "fail": [],
    "inapplicable": [
      {
        "description": "inapplicable-rule-1 description",
        "guidance": undefined,
        "id": "inapplicable-rule-1",
        "isExpanded": false,
        "nodes": [],
        "url": "url for inapplicable-rule-1 with default url https://example.com/rules/inapplicable-rule-1",
      },
      {
        "description": "inapplicable-rule-2 description",
        "guidance": undefined,
        "id": "inapplicable-rule-2",
        "isExpanded": false,
        "nodes": [],
        "url": "url for inapplicable-rule-2 with default url https://example.com/rules/inapplicable-rule-2",
      },
    ],
    "pass": [
      {
        "description": "passed-rule-1 description",
        "guidance": undefined,
        "id": "passed-rule-1",
        "isExpanded": false,
        "nodes": [],
        "url": "url for passed-rule-1 with default url https://example.com/rules/passed-rule-1",
      },
      {
        "description": "passed-rule-2 description",
        "guidance": undefined,
        "id": "passed-rule-2",
        "isExpanded": false,
        "nodes": [],
        "url": "url for passed-rule-2 with default url https://example.com/rules/passed-rule-2",
      },
    ],
    "unknown": [],
  },
  "visualHelperEnabled": false,
}
`;

exports[`CombinedResultsToCardsModelConverter without passed or inapplicable rules 1`] = `
{
  "allCardsCollapsed": true,
  "cards": {
    "fail": [
      {
        "description": "failed-rule-1 description",
        "guidance": undefined,
        "id": "failed-rule-1",
        "isExpanded": false,
        "nodes": [
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-1-selector-1, undefined",
              ],
              "snippet": "<div>snippet 1</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-1-selector-1",
              "css-selector": ".failed-rule-1-selector-1",
              "identifier": ".failed-rule-1-selector-1",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/only-violation",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 1 of rule failed-rule-1",
              "howToFixSummary": "Violation 1 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
          {
            "descriptors": {
              "relatedCssSelectors": [
                "normalizeRelatedSelectors output for .failed-rule-1-selector-2, undefined",
              ],
              "snippet": "<div>snippet 2</div>",
            },
            "highlightStatus": "unavailable",
            "identifiers": {
              "conciseName": ".failed-rule-1-selector-2",
              "css-selector": ".failed-rule-1-selector-2",
              "identifier": ".failed-rule-1-selector-2",
              "urls": {
                "urlInfos": [
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/1",
                  },
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/2",
                  },
                  {
                    "baselineStatus": "unknown",
                    "url": "https://example.com/failed-rule-1/violations/3",
                  },
                ],
              },
            },
            "isSelected": false,
            "resolution": {
              "how-to-fix": "fix Violation 2 of rule failed-rule-1",
              "howToFixSummary": "Violation 2 of rule failed-rule-1",
            },
            "ruleId": "failed-rule-1",
            "status": "fail",
            "uid": "test uid",
          },
        ],
        "url": "url for failed-rule-1 with default url https://example.com/rules/failed-rule-1",
      },
    ],
    "inapplicable": [],
    "pass": [],
    "unknown": [],
  },
  "visualHelperEnabled": false,
}
`;
